# app/api/user/user_types.go
@@ -1,0 +1,25 @@
+package user
+
+// 注册请求参数，用于前后端交互参数格式约定
+type SignUpRequest struct {
+	Passport  string `v:"required|length:6,16#账号不能为空|账号长度应当在:min到:max之间"`
+	Password  string `v:"required|length:6,16#请输入确认密码|密码长度应当在:min到:max之间"`
+	Password2 string `v:"required|length:6,16|same:Password#密码不能为空|密码长度应当在:min到:max之间|两次密码输入不相等"`
+	Nickname  string
+}
+
+// 登录请求参数，用于前后端交互参数格式约定
+type SignInRequest struct {
+	Passport string `v:"required#账号不能为空"`
+	Password string `v:"required#密码不能为空"`
+}
+
+// 账号唯一性检测请求参数，用于前后端交互参数格式约定
+type CheckPassportRequest struct {
+	Passport string `v:"required#账号不能为空"`
+}
+
+// 账号唯一性检测请求参数，用于前后端交互参数格式约定
+type CheckNickNameRequest struct {
+	Nickname string `v:"required#昵称不能为空"`
+}
